<resources>
    <string-array name="apiKeys">
        <item>38fbf5c450684e339b0e300b7bd7f8ea</item>
        <item>7a1b67b3a1de4bdfa45152a4b7e6cb1f</item>
        <item>1166e61781ca412c992eaa0e9ea2d6e1</item>
        <item>7f54b20d117a4e6593c4bd1c5ad5f595</item>
        <item>0bf1e62cd9114e1e97b3405dc10ad965</item>

        <item>1389fda813e64ebba835f00d844e5883</item>
        <item>a0c52b3b54804583a152e93dfb08685a</item>
        <item>89ceb0cc025241379a2b1f72f428074f</item>
        <item>aa3bb6b65477480587655a048a18a195</item>
        <item>6c2a05fd3370408ea6ce596f1b097115</item>

        <item>1672ddff93104a7d9953a2693b0bb513</item>
        <item>89129a72bc4943e7b88c83e75559ed21</item>
        <item>c721e313af9b4a0b8ac9d562c7fbfd94</item>
        <item>b6cca1572e3f46ab997d52fa4ca3df5f</item>
        <item>9e9cee4351424e549ea1dd40bc4bcc46</item>

        <item>e8cdd451d02a4e0987c803f90256f5c2</item>
        <item>60a8216592b84a74b832ba6903a4b619</item>
        <item>d9b95d3103bc4362b1c89dfc24bf0db3</item>
        <item>9a2d015ce34c4e418c55bad669e6c27f</item>
        <item>03cfa9e97c2e4b67b5e04578cfccdc28</item>

        <item>4bda5519457f49a8964814d6153259ab</item>
        <item>dddaf153653246f5966a83a1357a3af7</item>
        <item>0ed766bf36e84e47a508442fa0f36fce</item>
        <item>bfd2514b89d74ae793dd5748904bc7d6</item>
        <item>930e0b1d73e14c85be2ef570dffbb269</item>

        <item>67be8049f42f4d329e7a45d57d0e4b3c</item>
        <item>b9368e014fb548b2b78dc23fd3e6b2db</item>
        <item>58d2d61b1686447db1abe3ba31a45567</item>
        <item>36c867848e604586b99b114b80428e80</item>
        <item>ba5a41197f874359a3fec89a4660cd60</item>

        <item>d52af70f03b74b7b975593efe997e787</item>
        <item>1f5c713a1537498da23911fb76f5cad3</item>
        <item>7e99c20ee039459dae2eb90a47ba26c2</item>
        <item>5005257ced1e40a7acd50195cbfa2104</item>
        <item>251f2752a0f04f4c8090a7247ce00e18</item>

        <item>fbd4f4980f6d40f2aebd2cbe9f039d73</item>
        <item>c4bb082f532c42278034818238cdba42</item>
        <item>aa7201e962884b56a1cf51eb20f40644</item>
        <item>47478d366070413eba241e7125f749cf</item>
        <item>2ebd1b0d190d4647b9e10a06510c74c2</item>

        <item>5884f9d29d884898b3a21cfc07242653</item>
        <item>4f44ea1af0c3463ea233aa9ae1f21098</item>
        <item>37c748e656444715a79d792a6fc17a16</item>
        <item>8c64195520d24844897918deb4cf49bf</item>
        <item>0504e59b7907469aa050dc7e148b2fd2</item>

        <item>5283714e634e45e1bfa0f9830de61366</item>
        <item>f6e1f10b59b34562b8b7bc07ec5cbd4b</item>
        <item>0cd36da496fd4e499b3598e4e09bf31a</item>
        <item>48968c825d76489da9230a96e28c2d2e</item>
        <item>57df9e738d7a4133819925c42c1013da</item>
    </string-array>

    <string name="app_name">NewsGetter</string>
    <string name="connection_message">\nMolimo spojite se na internet i ponovno pokrenite aplikaciju!</string>
    <string name="dismiss">U redu</string>
    <string name="headlines_button">Naslovnice</string>
    <string name="home_button">Vijesti iz Hrvatske</string>
    <string name="search_button">Pretraži</string>
    <string name="search_warning">Unesite pojam za pretragu!</string>
    <string name="like_text">Sviđa mi se</string>
    <string name="dislike_text">Ne sviđa mi se</string>
    <string name="share_text">Podijeli</string>
    <string name="no_sources_warning">Nemate niti jedan izvor vijesti!\n\nMolimo odaberite barem jedan izvor!</string>
    <string name="browse_button">Otvori u web pregledniku</string>
    <string name="choose_source">Odaberite izvore</string>
    <string name="confirm_sources">Potvrdi</string>

    <string name="my_news_item">Moje Vijesti</string>
    <string name="sources_item">Izvori</string>
    <string name="search_item">Pretraži</string>
    <string name="favorites_item">Favoriti</string>

    <string name="empty_source_toast">Žao nam je, za ovaj izvor trenutno ne postoje vijesti.</string>

    <string name="select_all_text">Označi sve</string>
    <string name="unselect_all_text">Odznači sve</string>

    <string name="delete_favorites">Obriši sve</string>
    <string name="no_favorites">Nemate favorite</string>

    <string name="search_hint">Pretraži vijesti&#8230;</string>
    <string name="recommended_text">Preporučene vijesti</string>
    <string name="results_text">Rezultati pretrage</string>

    <string name="newsapi_attribution">Pokreće NewsAPI.org</string>

</resources>
