<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/eerieBlack">

    <TextView
        android:id="@+id/tvSelectSources"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:textColor="@color/heavyWhite"
        android:text="@string/choose_source"
        android:background="@color/eerieBlack"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--<Button
        android:id="@+id/btnSelectUnselectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSelectSources"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/space_drawable"
        android:textSize="15sp"
        android:text="@string/select_all_text"
        android:layout_marginEnd="5dp"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sources_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectSources"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectSources"/>

    <Button
        android:id="@+id/btnSelectSources"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/space_drawable"
        android:textColor="@color/fullBlack"
        android:textSize="15sp"
        android:text="@string/confirm_sources"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sources_recycler_view"
        app:layout_constraintBottom_toTopOf="@id/tvAttribution"/>

    <TextView
        android:id="@+id/tvAttribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/heavyWhite"
        android:text="@string/newsapi_attribution"
        android:background="@color/eerieBlack"
        android:padding="5dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnSelectSources"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>