<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/news_drawable"
    android:layout_marginBottom="10dp"
    android:paddingBottom="10dp"
    android:layout_marginTop="1dp"
    android:id="@+id/articleContainer"
    android:elevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/clArticle">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textSize="21sp"
            android:textColor="@color/heavyWhite"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:textColor="@color/lightWhite"
            android:background="@color/richBlack"
            android:padding="5dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/articleImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="1dp"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/articleImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14sp"
            android:textColor="@color/lightWhite"
            android:layout_marginTop="20dp"
            android:padding="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clArticle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/likeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/space_drawable">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like_text"
                android:textColor="@color/heavyWhite"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/like_icon_drawable"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dislikeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/space_drawable">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dislike_text"
                android:textColor="@color/heavyWhite"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/dislikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/liked_icon_drawable"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ViewSwitcher>

    <LinearLayout
        android:id="@+id/shareContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clArticle"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/space_drawable"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_text"
            android:textColor="@color/heavyWhite"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/share_icon_drawable" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>